k8s-front-ecomove/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecomove-front
  namespace: development-ecomove
  labels:
    app: ecomove-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecomove-front
  template:
    metadata:
      labels:
        app: ecomove-front
    spec:
      containers:
        - name: ecomove-front-container
          image: keduardoquintero/eco-frontend:0.9
          ports:
            - containerPort: 80
