k8s-front-ecomove/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ecomove-front-svc
  namespace: development-ecomove
spec:
  selector:
    app: ecomove-front  
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
