k8s-front-ecomove/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecomove-ingress
  namespace: development-ecomove
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    # Para CORS si es necesario:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
spec:
  ingressClassName: nginx
  rules:
    - host: ecomove.com  # Cambia esto por tu dominio o usa la IP
      http:
        paths:
          # Frontend
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ecomove-front-svc
                port:
                  number: 80
